--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "jweb-public-front",
+  "name": "my-config-next",
   "version": "0.1.0",
+  "repository": {
+    "url": "https://github.com/kenyk7/my-config-next"
+  },
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,11 +14,20 @@
   },
   "dependencies": {
     "next": "12.0.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-webpack-plugin": "^3.1.0"
+  },
+  "engines": {
+    "node": ">= 12.22.7"
   }
 }
