feat: config vscode + script format

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier src/**/*.ts src/**/*.tsx --write"
   },
   "dependencies": {
     "next": "12.3.0",
