--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   },
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": ">= 18.16.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,7 +17,7 @@
     "format": "prettier src/**/*.ts src/**/*.tsx --write"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,7 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "13.4.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
